--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@tinymce/tinymce-vue": "^3.2.8",
         "chart.js": "^3.5.0",
         "metismenujs": "^1.3.0",
         "toastr": "^2.1.4",
