--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@fullcalendar/core": "^5.9.0",
+        "@fullcalendar/daygrid": "^5.9.0",
+        "@fullcalendar/interaction": "^5.9.0",
+        "@fullcalendar/vue": "^5.9.0",
         "@tinymce/tinymce-vue": "^3.2.8",
+        "@vue-stripe/vue-stripe": "^4.2.5",
         "chart.js": "^3.5.0",
         "metismenujs": "^1.3.0",
         "toastr": "^2.1.4",
