fix - reminder comp [update event]

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,23 +1,28 @@
 {
-    "/js/admin/app.js": "/js/admin/app.js",
-    "/js/admin/admin-chunks/admin-dashboard.js": "/js/admin/admin-chunks/admin-dashboard.js",
-    "/js/admin/admin-chunks/admin-profile-view.js": "/js/admin/admin-chunks/admin-profile-view.js",
-    "/js/admin/admin-chunks/admin-profile-edit.js": "/js/admin/admin-chunks/admin-profile-edit.js",
-    "/js/admin/admin-chunks/admin-task-index.js": "/js/admin/admin-chunks/admin-task-index.js",
-    "/js/admin/admin-chunks/admin-task-create.js": "/js/admin/admin-chunks/admin-task-create.js",
-    "/js/admin/admin-chunks/admin-task-show.js": "/js/admin/admin-chunks/admin-task-show.js",
-    "/js/admin/admin-chunks/admin-task-log.js": "/js/admin/admin-chunks/admin-task-log.js",
-    "/js/admin/admin-chunks/admin-employee-index.js": "/js/admin/admin-chunks/admin-employee-index.js",
-    "/js/admin/admin-chunks/admin-employee-create.js": "/js/admin/admin-chunks/admin-employee-create.js",
-    "/js/admin/admin-chunks/admin-employee-show.js": "/js/admin/admin-chunks/admin-employee-show.js",
-    "/js/admin/admin-chunks/admin-employee-edit.js": "/js/admin/admin-chunks/admin-employee-edit.js",
-    "/js/admin/admin-chunks/admin-client-index.js": "/js/admin/admin-chunks/admin-client-index.js",
-    "/js/admin/admin-chunks/admin-client-create.js": "/js/admin/admin-chunks/admin-client-create.js",
-    "/js/admin/admin-chunks/admin-client-show.js": "/js/admin/admin-chunks/admin-client-show.js",
-    "/js/admin/admin-chunks/admin-blog-index.js": "/js/admin/admin-chunks/admin-blog-index.js",
-    "/js/admin/admin-chunks/admin-blog-create.js": "/js/admin/admin-chunks/admin-blog-create.js",
-    "/js/admin/admin-chunks/admin-blog-show.js": "/js/admin/admin-chunks/admin-blog-show.js",
-    "/js/admin/admin-chunks/admin-Referral-index.js": "/js/admin/admin-chunks/admin-Referral-index.js",
-    "/js/admin/admin-chunks/admin.chat.js": "/js/admin/admin-chunks/admin.chat.js",
-    "/css/admin/app.css": "/css/admin/app.css"
+    "/js/client/app.js": "/js/client/app.js",
+    "/js/client/client-chunks/client-dashboard.js": "/js/client/client-chunks/client-dashboard.js",
+    "/js/client/client-chunks/client-profile-view.js": "/js/client/client-chunks/client-profile-view.js",
+    "/js/client/client-chunks/client-profile-social_life.js": "/js/client/client-chunks/client-profile-social_life.js",
+    "/js/client/client-chunks/client-profile-contacts.js": "/js/client/client-chunks/client-profile-contacts.js",
+    "/js/client/client-chunks/client-profile-travels.js": "/js/client/client-chunks/client-profile-travels.js",
+    "/js/client/client-chunks/client-task-index.js": "/js/client/client-chunks/client-task-index.js",
+    "/js/client/client-chunks/client-task-create.js": "/js/client/client-chunks/client-task-create.js",
+    "/js/client/client-chunks/client-task-show.js": "/js/client/client-chunks/client-task-show.js",
+    "/js/client/client-chunks/client-task-log.js": "/js/client/client-chunks/client-task-log.js",
+    "/js/client/client-chunks/client-task-edit.js": "/js/client/client-chunks/client-task-edit.js",
+    "/js/client/client-chunks/client-employee-index.js": "/js/client/client-chunks/client-employee-index.js",
+    "/js/client/client-chunks/client-employee-create.js": "/js/client/client-chunks/client-employee-create.js",
+    "/js/client/client-chunks/client-employee-show.js": "/js/client/client-chunks/client-employee-show.js",
+    "/js/client/client-chunks/client-employee-edit.js": "/js/client/client-chunks/client-employee-edit.js",
+    "/js/client/client-chunks/client-client-index.js": "/js/client/client-chunks/client-client-index.js",
+    "/js/client/client-chunks/client-client-create.js": "/js/client/client-chunks/client-client-create.js",
+    "/js/client/client-chunks/client-client-show.js": "/js/client/client-chunks/client-client-show.js",
+    "/js/client/client-chunks/client-blog-index.js": "/js/client/client-chunks/client-blog-index.js",
+    "/js/client/client-chunks/client-blog-create.js": "/js/client/client-chunks/client-blog-create.js",
+    "/js/client/client-chunks/client-blog-show.js": "/js/client/client-chunks/client-blog-show.js",
+    "/js/client/client-chunks/client-Referral-index.js": "/js/client/client-chunks/client-Referral-index.js",
+    "/js/client/client-chunks/client-Referral-create.js": "/js/client/client-chunks/client-Referral-create.js",
+    "/js/client/client-chunks/client.chat.js": "/js/client/client-chunks/client.chat.js",
+    "/js/client/client-chunks/client.reminder.js": "/js/client/client-chunks/client.reminder.js",
+    "/css/client/app.css": "/css/client/app.css"
 }
